@startuml Package **cloudapps.mastermind.utils**

package "cloudapps.mastermind.utils" {

  
  class Console {
    +{static}Console console
    -BufferedReader bufferedReader
    +{static} instance(): Console
    +write(char): void
    +write(String): void
    +readInt(String): int
    +readChar(String): char
    +readString(String): String
    +writeln(int): void
    +writeln(String): void
    +writeln(): void
    +writeError(String): void

  }
  
  class YesNoDialog {
    {static} -final char AFFIRMATIVE
    {static} -final char NEGATIVE
    {static} -final String SUFFIX
    {static} -final String MESSAGE
    -char answer
    +read(String): boolean
    -isAfirmative(): boolean
    -getAnswer(): char
    -isNegative(): boolean
  }
  
  YesNoDialog ..> Console
  Console *--> java.io.BufferedReader
  }

package "java.io" {
  
  class BufferedReader {}


@enduml
